Added metric datapoints to status update
